<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vMtvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/home_title"
        android:textAppearance="@style/Theme.Ava.TextAppearance.UI30SB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vMtvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_tiny"
        android:text="@string/home_subtitle"
        android:textAppearance="@style/Theme.Ava.TextAppearance.UI16L"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vMtvTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vMtvMeetingRoom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_teeny"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/room_background"
        android:backgroundTint="@color/gallery"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_large"
        android:text="@string/home_meeting_room_title"
        android:textAppearance="@style/Theme.Ava.TextAppearance.UI20SB"
        app:layout_constraintBottom_toTopOf="@id/vMtvPrivateBooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vMtvSubtitle"
        app:layout_constraintVertical_weight="0.41" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vMtvPrivateBooth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_teeny"
        android:background="@drawable/room_background"
        android:backgroundTint="@color/portafino"
        android:clickable="true"
        android:focusable="true"
        android:gravity="bottom"
        android:padding="@dimen/margin_large"
        android:text="@string/home_private_booth_title"
        android:textAppearance="@style/Theme.Ava.TextAppearance.UI20SB"
        app:layout_constraintBottom_toTopOf="@id/vMtvLounge"
        app:layout_constraintEnd_toStartOf="@id/vMtvBreakOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vMtvMeetingRoom"
        app:layout_constraintVertical_weight="0.34" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vMtvBreakOut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_teeny"
        android:background="@drawable/room_background"
        android:backgroundTint="@color/blue_ribbon"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:padding="@dimen/margin_large"
        android:text="@string/home_break_out_title"
        android:textAppearance="@style/Theme.Ava.TextAppearance.UI20SB"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/vMtvPrivateBooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vMtvPrivateBooth"
        app:layout_constraintTop_toTopOf="@id/vMtvPrivateBooth" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vMtvLounge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_teeny"
        android:background="@drawable/room_background"
        android:backgroundTint="@color/cod_gray"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/margin_large"
        android:text="@string/home_lounge_title"
        android:textAppearance="@style/Theme.Ava.TextAppearance.UI20SB"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vMtvPrivateBooth"
        app:layout_constraintVertical_weight="0.24" />
</androidx.constraintlayout.widget.ConstraintLayout>